fix curse card text overflow

--- a/kingoftokyo.css
+++ b/kingoftokyo.css
@@ -793,6 +793,13 @@
   height: 12px;
   margin-bottom: -2px;
 }
+.stockitem .effect-wrapper .effect-text.overflow, #deck .effect-wrapper .effect-text.overflow {
+  background: radial-gradient(#0db9e9, #0fa2d8, #1265ab);
+  border: 2px solid #42aad1;
+  margin: -5px;
+  padding: 2px;
+  border-radius: 7px;
+}
 .stockitem .permanent-effect-wrapper, #deck .permanent-effect-wrapper {
   left: 9px;
   width: 116px;
