--- a/src/_cards.scss
+++ b/src/_cards.scss
@@ -129,6 +129,16 @@ $description-size: 7pt;
             height: 12px;
             margin-bottom: -2px;
         }
+
+        .effect-text {
+            &.overflow {
+                background: radial-gradient(#0db9e9, #0fa2d8, #1265ab);
+                border: 2px solid #42aad1;
+                margin: -5px;
+                padding: 2px;
+                border-radius: 7px;
+            }
+        }
     }
 
     .permanent-effect-wrapper {
